Fix/fix ms 018